fix(database/pg-sample): include username in owner secret for CNPG password sync

--- a/kubernetes/apps/default/pg-sample/secrets/pg-sample-owner.sops.yaml
+++ b/kubernetes/apps/default/pg-sample/secrets/pg-sample-owner.sops.yaml
@@ -5,20 +5,21 @@ metadata:
   namespace: default
 type: Opaque
 stringData:
-  password: ENC[AES256_GCM,data:jnMt4kAK2uop8uXgwBbuaA==,iv:4QGP+xz6SQG+WuYoaKmqFan8LjJR4534DabHPjA1B/Y=,tag:pGyzdAnwr+abTUTv26Sg3Q==,type:str]
+  password: ENC[AES256_GCM,data:jA32zK2nyYCqHAhafS2zIA==,iv:6akWBthlPB+ZEU7YWT8TW6roSV1IwSCV3G5NPY9EXqs=,tag:DSiU7BU+DJz+3bIoGWb/KQ==,type:str]
+  username: ENC[AES256_GCM,data:PwPE7VNKHA==,iv:/4UkP7oLqozRZ0ics+mMmqLUDgczQY/sHUt0d1z1sxg=,tag:iubbPMvBwNifnzs1OkUoQA==,type:str]
 sops:
   age:
     - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJYlI4aUVZNHpVZGdabmtq
-        WG9wY3FNTFFsREVVTkk4enhrc2hRbDZKRUdVCnBVQ29rUUdXanArK3NUSk5RY3lq
-        ZEtUbU5MZDEzTlREeWs0RlllZGVmWUUKLS0tIEJNaVlwUDE2NVprb0duZHBLQUVt
-        cWhLWVNKWHBJaHJlcTd2eFUvM2FYL0kKoKUxVO+Fc8Q263O7rwcfNMDCuqS1F5vi
-        Zf3oiaplgKiFA4II0PaVQhdd9MB8VfjoGL9ZfTw/Y4VeDcmnKK3nvw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaUEpVK1g0SWgvVUczOUQ0
+        UXNxazRudjJwcUlGeDBWMFhSUTBHTDBKeWw0Cnp2eDhZbWNHZEZnVm9NaVAxMVlY
+        bDdZS1U0cW90YlhiVFp0SUxOdThWZmcKLS0tIHd3ZUE4MmZ2VUxqajBvd1l4R0tZ
+        ZlFJQUJ5UThuS1R5Q1JKWktCSEFUWjAKxoEaPwlNxBLJroY14+mnu0tMtG9Ys2We
+        lzOCxM0HQYjXIpO91aiYd1h/ALYqC74yhPBO+/Q8qmzXu2IALU8C1A==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-09-01T19:33:45Z"
-  mac: ENC[AES256_GCM,data:x+E8ipyi25ZuJ7BaDgB2ej8RpB2GwJkrqY25NA+7NE7IBYkMHRd4E5LDQ3Lw4BssHe8SAYxNuO+TXdzgv6qxdJ5VzsrjSpRl8Mk0SQyN9pStblpM72tPZKVUNskckfMWdrnmyJBUyIpcZa62HFgrR5xtbwp9mULFNGAzGx55DMk=,iv:hv5tNnO90ePqD3IxuG22d0LtiJhQ3MAkrrUWhRmyAoI=,tag:tmIyhGV8O+yTD+AQSAROzg==,type:str]
+  lastmodified: "2025-09-01T20:46:24Z"
+  mac: ENC[AES256_GCM,data:E1vQbT4iI5hWykx6cZ0Nb+01FE9KbhnRGGMhmqm+Ghh53HQ79PF4h1QReX6C4m4ZcWF08Ce4g/QrD057lq2dLAGdwbTu+vOfSNzQLzuCyijuJpXxDHGWNzdBaESLaHShARhY7IZAI3me6QpkJ4c0f+4M8SARjLvK8rs3YaxComE=,iv:lLd/FK8wMITapvGpH2P6knhZhZTkazIcXkPKcZ60p9E=,tag:EZDFHK6lK09HP6sQE5cnVw==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
