feat(database/pg-sample): manage appuser role with passwordSecret for reliable password sync

--- a/kubernetes/apps/default/pg-sample/cluster.yaml
+++ b/kubernetes/apps/default/pg-sample/cluster.yaml
@@ -16,6 +16,14 @@ spec:
       owner: appuser
       secret:
         name: pg-sample-owner
+  managed:
+    roles:
+      - name: appuser
+        login: true
+        superuser: false
+        passwordSecret:
+          name: pg-sample-owner
+          key: password
   monitoring:
     enablePodMonitor: true
   backup:
