--- a/kubernetes/apps/default/pg-sample/cluster.yaml
+++ b/kubernetes/apps/default/pg-sample/cluster.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   instances: 1
   imageName: ghcr.io/cloudnative-pg/postgresql:16
+  enableSuperuserAccess: true
   storage:
     size: 10Gi
     storageClass: longhorn
