--- a/kubernetes/apps/security/keycloak/app/kustomization.yaml
+++ b/kubernetes/apps/security/keycloak/app/kustomization.yaml
@@ -2,9 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: security
 resources:
-  - ./namespace.yaml
-  - ./secrets
-  - ./authentik/ks.yaml
-  - ./keycloak/ks.yaml
+  - ./helmrelease.yaml
+  - ./httproute.yaml
+  - ../db/cluster.yaml
+
