--- a/kubernetes/apps/security/secrets/kustomization.yaml
+++ b/kubernetes/apps/security/secrets/kustomization.yaml
@@ -5,4 +5,6 @@ kind: Kustomization
 resources:
   - ./cluster-secrets.sops.yaml
   - ./sops-age.sops.yaml
-
+  - ./keycloak-admin.sops.yaml
+  - ./keycloak-db.sops.yaml
+  - ./keycloak-db-owner.sops.yaml
