--- a/kubernetes/apps/security/secrets/keycloak-db-owner.sops.yaml
+++ b/kubernetes/apps/security/secrets/keycloak-db-owner.sops.yaml
@@ -1,25 +1,25 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: keycloak-db-owner
-  namespace: security
+    name: keycloak-db-owner
+    namespace: security
 type: Opaque
 stringData:
-  username: ENC[AES256_GCM,data:+CYPE67gkqo=,iv:cGOSynyN11HJEPa57Hz7oyFeH+GIAXidG4hSoLq70rM=,tag:APAO3jxZMG/WljmobmZlFg==,type:str]
-  password: ENC[AES256_GCM,data:NfEnJFYk165bIDIpoJ/gFTHeoCJ2,iv:/S7tOarRkOPYeP6Ats5D8jYnziaDds26hBSquM3q+vg=,tag:oZO2QgtzFTYvouRNt6dSVA==,type:str]
+    username: ENC[AES256_GCM,data:+CYPE67gkqo=,iv:cGOSynyN11HJEPa57Hz7oyFeH+GIAXidG4hSoLq70rM=,tag:APAO3jxZMG/WljmobmZlFg==,type:str]
+    password: ENC[AES256_GCM,data:Ad8e1dcH2MvNkS4=,iv:tTzFwfrKXRhon5lBXjUnLGzJ9u5oRKr/0FdpIc8VXEk=,tag:ysCi+CbdkqoeBpTQlO0smw==,type:str]
 sops:
-  age:
-    - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSak10MWpqVk95ZFZrL1JR
-        ZEdwdjlrU2dMcVpOeXhWc2M2WXZSS04ra3dJCjFRWGdQUDFnNXRpcUpqNThEQlh4
-        RUwwQ2s0ZDc1L2RLanVzSTZNckhXL0kKLS0tIHNFYThQUCtITjllVzNENDBJQjJm
-        VmRQRTV3U3JJZXpOb2lIN1pzbHkrc2sKhTt0Gp1yMCSJEQJJe9ttw0Z8PNgj0Wwp
-        msTI8iXgZpLNINMdrPfVK9+Sfy2Gju6d+5Gj2AbH+hKO75Lizf74Fw==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-09-02T12:13:17Z"
-  mac: ENC[AES256_GCM,data:bBLNZ9Uxr/KbQq1Id1ZwWqwe55TNTYYp27PgdCXF+YaUG2XpCFGhh4UC1r8YJOE2NNB4mJIn0v6vccQHuXv833ZhXzujUFMVJxvHFMFVtY+7OYiQm8bgC5HrW45CrI02c90qCKPI3R0jWjwYAwJ4IzKGk8MOZUrkuqPl2YEaNn8=,iv:dFxDJm9l5kMb4LHptaPDuCtl4uPFL3hGIXRIkjAmXT0=,tag:MpH5KKiu1BrL+Cz3pPN1jQ==,type:str]
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.10.2
+    age:
+        - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSak10MWpqVk95ZFZrL1JR
+            ZEdwdjlrU2dMcVpOeXhWc2M2WXZSS04ra3dJCjFRWGdQUDFnNXRpcUpqNThEQlh4
+            RUwwQ2s0ZDc1L2RLanVzSTZNckhXL0kKLS0tIHNFYThQUCtITjllVzNENDBJQjJm
+            VmRQRTV3U3JJZXpOb2lIN1pzbHkrc2sKhTt0Gp1yMCSJEQJJe9ttw0Z8PNgj0Wwp
+            msTI8iXgZpLNINMdrPfVK9+Sfy2Gju6d+5Gj2AbH+hKO75Lizf74Fw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-09-02T12:24:06Z"
+    mac: ENC[AES256_GCM,data:4WFsgbQMM/iKBtF4XerYkzSlZirdPdh5a9yRqpi80wX3AkkE+9/1ukYgY04YJObN2wNZryL1D9jHi2+GmZSfcL9+ZnK/SbVzrNnGBYH2W6ZoamQUcmRnpagf/lly55VAqUTCurPNkjOMIxb+Bb01iaVRX+4lgpxKoK5f+9Cd0x0=,iv:SxVG0o2YAU1CR6uwIPjt277YmObcikR0HQSbui+FbNY=,tag:c9QdXTSmVXV9st2BwpncXA==,type:str]
+    encrypted_regex: ^(data|stringData)$
+    mac_only_encrypted: true
+    version: 3.10.2
