fix(security/keycloak): set proxyHeaders=xforwarded for production behind Gateway

--- a/kubernetes/apps/security/keycloak/app/helmrelease.yaml
+++ b/kubernetes/apps/security/keycloak/app/helmrelease.yaml
@@ -30,6 +30,7 @@ spec:
       retries: 3
   values:
     production: true
+    proxyHeaders: xforwarded
     postgresql:
       enabled: false
     service:
