fix(security/keycloak): increase resources to avoid OOM (2Gi/1Gi)

--- a/kubernetes/apps/security/keycloak/app/helmrelease.yaml
+++ b/kubernetes/apps/security/keycloak/app/helmrelease.yaml
@@ -37,6 +37,13 @@ spec:
       type: ClusterIP
       ports:
         http: 80
+    resources:
+      requests:
+        cpu: 500m
+        memory: 1Gi
+      limits:
+        cpu: 1000m
+        memory: 2Gi
     ingress:
       enabled: false
     auth:
