fix(security/keycloak): set hostname to keycloak. for reverse-proxy setup

--- a/kubernetes/apps/security/keycloak/app/helmrelease.yaml
+++ b/kubernetes/apps/security/keycloak/app/helmrelease.yaml
@@ -31,6 +31,7 @@ spec:
   values:
     production: true
     proxyHeaders: xforwarded
+    hostname: keycloak.${SECRET_DOMAIN}
     postgresql:
       enabled: false
     service:
