fix(security/keycloak-db): point managed role passwordSecret to keycloak-db (the secret Keycloak uses)

--- a/kubernetes/apps/security/keycloak/db/cluster.yaml
+++ b/kubernetes/apps/security/keycloak/db/cluster.yaml
@@ -23,7 +23,7 @@ spec:
         login: true
         superuser: false
         passwordSecret:
-          name: keycloak-db-owner
+          name: keycloak-db
           key: password
   monitoring:
     enablePodMonitor: true
