fix(security/keycloak): set auth.adminUser=admin to match expected login

--- a/kubernetes/apps/security/keycloak/app/helmrelease.yaml
+++ b/kubernetes/apps/security/keycloak/app/helmrelease.yaml
@@ -48,6 +48,7 @@ spec:
     ingress:
       enabled: false
     auth:
+      adminUser: admin
       existingSecret: keycloak-admin
       passwordSecretKey: admin-password
     metrics:
