fix(security/keycloak): read admin username from secret (admin-user) and set existingSecretUserKey; ensure secret contains admin-user=admin

--- a/kubernetes/apps/security/keycloak/app/helmrelease.yaml
+++ b/kubernetes/apps/security/keycloak/app/helmrelease.yaml
@@ -48,8 +48,8 @@ spec:
     ingress:
       enabled: false
     auth:
-      adminUser: admin
       existingSecret: keycloak-admin
+      existingSecretUserKey: admin-user
       passwordSecretKey: admin-password
     metrics:
       enabled: true
