--- a/kubernetes/apps/security/secrets/keycloak-admin.sops.yaml
+++ b/kubernetes/apps/security/secrets/keycloak-admin.sops.yaml
@@ -1,24 +1,25 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: keycloak-admin
-    namespace: security
+  name: keycloak-admin
+  namespace: security
 type: Opaque
 stringData:
-    admin-password: ENC[AES256_GCM,data:4RFbHd4GxLDOFAY=,iv:LQPA0mX6SSnUFkBz7Eg/zag22i8XoNE2FXCUaCiPxgo=,tag:u1uyo7c4j0qe5GydUWGDTw==,type:str]
+  admin-password: ENC[AES256_GCM,data:PE8serLTn+EMhwk=,iv:RhTL4QsQ7nVZyi8LRUUh3X5ST9Qj96mTMPMIjq45C1I=,tag:XLgRdZLgrflHC67sRoLAmg==,type:str]
+  admin-user: ENC[AES256_GCM,data:sIFOGmY=,iv:EJovYwn21zIjfB65Q5CycT/WPRnx/1M77zcG4ZEazEc=,tag:QHyvk/Ix5qg6WC2A9rfrgA==,type:str]
 sops:
-    age:
-        - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByUThtRnB4VDZ3ZDVhbnZx
-            cURtYW5jZmlxTzNMYmppVGJKVnNTNU5yQkhjCmdOVjZ5UEgwNGs4VkdpOVB1M1ZE
-            ZnN2N0NsMG9ETVhUb1N3dmt4YS8xMFEKLS0tIHVCQWJBQkZORjBzWG42TDdpT0xp
-            SU1UdmxsOG5lUTRWbllqMzNwV0pjN28KMRXFWgoTwhSSr5eOx+JYx2Tna4Cy4OSm
-            zEZ0gXXKncpdjc4oAEhraS2NROiC645EP/SU4MFNdGedYDl22RvzqQ==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-09-02T12:23:45Z"
-    mac: ENC[AES256_GCM,data:lOBL/3ATiXqGT2hUaMbLeSUNiimp3W2TaeIP4eSvwxgwQXPPqG38qwootzmG5h6PBRoVSYXY0iwJ2MPJvTC92FUdERiortstoL/KZI9Q+P7wzqlr17Ngtlh+p64yuROMb4DAeU2HBJ6SkqdFmdanPLYYRASqFYhC4TbIKgA968Y=,iv:HhQRC8/B9ZXY8aoyBODsriGemWeHjJxaO19/me8X5Xw=,tag:rsEYLD95PEGYnADR2Qeb2Q==,type:str]
-    encrypted_regex: ^(data|stringData)$
-    mac_only_encrypted: true
-    version: 3.10.2
+  age:
+    - recipient: age19tvjegxtk6e4gef3km9ns96uhhhvdrda3n04kv0g5sf0mggal40shfwzc9
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNN0RkWWFoMmlkK01KTlVP
+        aHZuOFpDQ2k4VUUvU1RYMFNZNGl5dFNncGk0CjYvei81dER0WXhQajkvSDQybGc1
+        VW1qSWJpbnk1c0NLSlJ4RE9IZklwZXMKLS0tIHdCRTF3cnZlVHdjNnhraDhkNTQr
+        Y1daeUQ1MjhFclU2clN5ZDdlKy9TaWsKq6S+aW/imeBr9M18HJSDbrMpNR/o5KFi
+        5KV8uUM7/2t8Z/z9rxVZKESOMJ3TX2cloTyyeb5Uu0Gim49UwQnFxA==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-09-02T15:54:51Z"
+  mac: ENC[AES256_GCM,data:q9axCOAtvVZ1rJnHbyQ4uLukkniszpLyHzzS8IN/rOJjzmntVR254riQYY9E8GmUGB8qldkBV2fSPxTFwoaVwolH122+qG2xntPrKwnss7Pp66q0kTDLNoTVFcnxUIWjZD4Kt9Tf/9sOsoARdD2ENPqiZGseBGuB8+oX29wqGos=,iv:afjdwGVyUs9lzpe1Y+Kl1JCBdpU2VqV+2VJ1eNloPws=,tag:qa7v5ZcPASN/+OLk0RBCnQ==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
+  version: 3.10.2
